05/demos/m5/demo4/logging/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-lb
  namespace: logging
spec:
  selector:    
    app: kibana
  ports:
  - name: kibana
    port: 5601
    targetPort: 5601
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - image: courselabs/kibana:7.10
        name: kibana
        ports:
        - containerPort: 5601
          name: kibana
