05/demos/m5/demo4/logging/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: logging
spec:
  host: kibana-logging.apps-crc.testing
  to:
    kind: Service
    name: kibana
  port:
    targetPort: kibana
